[gd_scene load_steps=6 format=2]

[ext_resource path="res://hammered_nail/hammered_nail.gd" type="Script" id=1]
[ext_resource path="res://nail_body/nail_body.tscn" type="PackedScene" id=2]
[ext_resource path="res://hammering/hammering.tscn" type="PackedScene" id=3]
[ext_resource path="res://audio/plate.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 13.5189, 99.9417 )

[node name="HammeredNail" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="Hammering" parent="." instance=ExtResource( 3 )]
position = Vector2( 316.779, -429.083 )

[node name="NailBody" parent="." instance=ExtResource( 2 )]
position = Vector2( -4.23779, -186.465 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -5.2973, -73.103 )
rotation = 0.0119348
shape = SubResource( 1 )
disabled = true

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[connection signal="hammered" from="Hammering" to="." method="_on_Hammering_hammered"]
[connection signal="body_entered" from="NailBody" to="." method="_on_NailBody_body_entered"]
